--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,7 +12,30 @@ body {
   color: #5a5a5a;
 }
 
+/* CUSTOMIZE THE NAVBAR
+-------------------------------------------------- */
 
+/* Special class on .container surrounding .navbar, used for positioning it into place. */
+.navbar-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 20;
+}
+
+/* Flip around the padding for proper display in narrow viewports */
+.navbar-wrapper > .container {
+  padding-right: 0;
+  padding-left: 0;
+}
+.navbar-wrapper .navbar {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.navbar-wrapper .navbar .container {
+  width: auto;
+}
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
@@ -57,6 +80,10 @@ body {
   margin-right: 10px;
   margin-left: 10px;
 }
+.marketing .col-lg-4 ul {
+  margin-bottom: 20px;
+  text-align: left;
+}
 
 
 /* Featurettes
@@ -80,6 +107,24 @@ body {
 
 @media (min-width: 768px) {
 
+  /* Navbar positioning foo */
+  .navbar-wrapper {
+    margin-top: 20px;
+  }
+  .navbar-wrapper .container {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .navbar-wrapper .navbar {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  /* The navbar becomes detached from the top, so we round the corners */
+  .navbar-wrapper .navbar {
+    border-radius: 4px;
+  }
+
   /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 20px;
@@ -89,11 +134,5 @@ body {
 
   .featurette-heading {
     font-size: 50px;
-  }
-}
-
-@media (min-width: 992px) {
-  .featurette-heading {
-    margin-top: 120px;
   }
 }
