--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -47,42 +47,29 @@ body {
   background-repeat: no-repeat;
   padding: 0px;
 }
-.jumbotron h1 {
-  text-shadow: 0 2px 2px #333;
+.jumbotron-home h1 {
+  font-size: 63px;
 }
 .jumbotron-overlay {
   padding: 30px;
   background-color: rgba(0, 0, 0, 0.6);
 }
+.jumbotron-home .container {
+  @extend .text-center;
+  max-width: 800px;
+}
 
-
-/* CUSTOMIZE THE CAROUSEL
+/* GALLERY
 -------------------------------------------------- */
 
-/* Carousel base class */
-.carousel {
-  height: 500px;
-  margin-bottom: 60px;
+.thumb {
+  margin-bottom: 30px;
 }
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
+.thumb > a {
+  display: block;
+  width: 250px;
+  height: 200px;
 }
-
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 500px;
-  background-color: #777;
-}
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
-}
-
-
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
