--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 body {
   padding-bottom: 40px;
   color: #5a5a5a;
+  position: relative;
 }
 
 /* CUSTOMIZE THE NAVBAR
