WIP: Fix mobile nav for safar on landscape

--- a/static/main.css
+++ b/static/main.css
@@ -3,4 +3,9 @@ body {
 	font-size: 18px;
 	line-height: 1.25;
 	text-rendering: optimizeLegibility;
+	overflow-x: hidden;
+}
+
+html {
+	overflow-x: hidden;
 }
