--- a/src/lib/style_variables.css
+++ b/src/lib/style_variables.css
@@ -4,7 +4,7 @@
 	--color-text-dark: #333;
 	--color-text-muted: #666;
 	--color-background-light: #f5f5f5;
-	--color-nav-background: #add8e6ff;
+	--color-nav-background: #d0c89a;
 
 	/* Font Families */
 	--font-heading: 'Radley', serif;
